# term-table-rs

./: Cargo.toml
src/: lib.rs  table_cell.rs
