[package]
name = "term-table"
version = "1.3.2"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>"]
description = "Tables for CLI apps"
license = "MIT"
repository = "https://github.com/RyanBluth/term-table-rs"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["table", "cli", "terminal"]
edition = "2018"

[dependencies]
lazy_static = { version = "1", optional = true }
regex = { version = "1", optional = true }
unicode-width = "0.1"

[features]
strip_ansi = ["regex", "lazy_static"]

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.3"